@@ -964,6 +964,9 @@ ReadConfig(
         } else if (MyStriCmp(TokenList[0], L"force_trim")) {
           GlobalConfig.ForceTrim = HandleBoolean(TokenList, TokenCount);
 
+        } else if (MyStriCmp(TokenList[0], L"disable_compat_check")) {
+          GlobalConfig.DisableCompatCheck = HandleBoolean(TokenList, TokenCount);
+
         } else if (MyStriCmp(TokenList[0], L"scale_ui")) {
            HandleInt(TokenList, TokenCount, &(GlobalConfig.ScaleUI));
 
